--- a/MovieDetailPage.xaml
+++ b/MovieDetailPage.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CMPE312_PROJECT_TICKETSYSTEM"
         mc:Ignorable="d"
-        Title="MovieDetailPage" Height="450" Width="800">
+        Title="MovieDetailPage" Height="480" Width="800">
     <Grid>
         <Label x:Name="MovieNameText" Content="Label" HorizontalAlignment="Left" Margin="236,69,0,0" VerticalAlignment="Top" Height="48" Width="249" RenderTransformOrigin="0.5,0.5" FontSize="24">
             <Label.RenderTransform>
@@ -22,6 +22,7 @@
         <Label x:Name="MovieDurationText" Content="Label" HorizontalAlignment="Left" Margin="531,151,0,0" VerticalAlignment="Top" RenderTransformOrigin="1.118,0.666"/>
         <TextBox x:Name="MovieSummaryText" HorizontalAlignment="Left" Margin="246,208,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="370" Height="145" BorderBrush="White" IsReadOnly="True" IsUndoEnabled="False"/>
         <Button Content="Back" HorizontalAlignment="Left" Margin="53,367,0,0" VerticalAlignment="Top" Height="41" Width="131" Click="Button_Click"/>
+        <Button x:Name="CheckoutButton" Content="Checkout " HorizontalAlignment="Left" Margin="609,367,0,0" VerticalAlignment="Top" Height="41" Width="131" Click="CheckoutButton_Click"  />
 
     </Grid>
 </Window>
