--- a/CheckoutPage.xaml
+++ b/CheckoutPage.xaml
@@ -16,7 +16,7 @@
         <TextBox x:Name="CreditCardTextBox" HorizontalAlignment="Left" Margin="451,191,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="142" />
         <Label Content="Password:" HorizontalAlignment="Left" Margin="283,230,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
         <PasswordBox x:Name="PasswordTextBox" HorizontalAlignment="Left" Margin="451,234,0,0" VerticalAlignment="Top" Width="142"/>
-        <CheckBox Content="I agree with the terms and conditions." HorizontalAlignment="Left" Margin="283,281,0,0" VerticalAlignment="Top" Width="310"/>
+        <CheckBox x:Name="Checkbox" Content="I agree with the terms and conditions." HorizontalAlignment="Left" Margin="283,281,0,0" VerticalAlignment="Top" Width="310"/>
         <Button Content="Complete Checkout" HorizontalAlignment="Left" Margin="624,348,0,0" VerticalAlignment="Top" Height="47" Width="133" Click="Button_Click"/>
         <Button x:Name="BackButton" Content="Back to Movies Page" HorizontalAlignment="Left" Margin="74,343,0,0" VerticalAlignment="Top" Height="47" Width="133" Click="BackButton_Click" />
         <Label x:Name="PriceLabel" Content="Price:" HorizontalAlignment="Left" Margin="615,289,0,0" VerticalAlignment="Top" Height="45" Width="101" FontSize="20" FontWeight="Bold"/>
