--- a/MoviesPage.xaml
+++ b/MoviesPage.xaml
@@ -22,6 +22,6 @@
         <Label Content="Uncut Gems" HorizontalAlignment="Left" VerticalAlignment="Center" Width="122" Margin="347,0,0,0"/>
         <Label Content="Mulholland Drive" HorizontalAlignment="Left" VerticalAlignment="Center" Width="122" Margin="495,0,0,0"/>
         <Label Content="Fight Club" HorizontalAlignment="Left" VerticalAlignment="Center" Width="122" Margin="646,0,0,0"/>
-        <Button Content="My Tickets" HorizontalAlignment="Left" Margin="627,356,0,0" VerticalAlignment="Top" Height="55" Width="141" FontSize="22"/>
+        <Button Content="My Tickets" HorizontalAlignment="Left" Margin="627,356,0,0" VerticalAlignment="Top" Height="55" Width="141" FontSize="22" Click="Button_Click"/>
     </Grid>
 </Window>
